# StellaScript

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: docs-deploy.yml
docs/: build_docs.bat
docs/source/: conf.py  index.rst
docs/source/api/: index.rst  modules.rst
docs/source/concepts/: architecture.rst  bibliography.rst  index.rst  quality.rst  whisper_models.rst
docs/source/technical/: architecture.rst  index.rst
stellascript/: __init__.py  cli.py  config.py  logging_config.py  orchestrator.py
stellascript/audio/: __init__.py  capture.py  enhancement.py
stellascript/processing/: diarizer.py  speaker_manager.py  transcriber.py
