[project]
name = "stellascript"
version = "1.0.0"
description = "Your stellar transcription companion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyannote-audio",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "speechbrain>=1.0.3",
    "torch>=2.8.0",
    "torchaudio",
    "onnxruntime",
    "ctranslate2",
    "demucs>=4.0.1",
    "soundfile>=0.13.1",
    "deepfilternet",
    "torchvision>=0.23.0",
    "torchcodec>=0.7.0",
    "whisperx>=3.3.1",
]
